[package]
name = "pngcrop"
version = "0.1.0"
authors = ["Max Verbeek <m4xv3rb33k@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1.1.0"
serde = { version = "1", features = ["derive"] }
image = "0.23.14"